# cpp-aux

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ToDos.md  vcpkg.json
.devcontainer/: devcontainer.json
src/cmake/: enable_clang_tidy.cmake  log_target_properties.cmake  target_disable_clang_tidy.cmake
src/text/: CMakeLists.txt
src/text/include/: text.cxxm  text.h
src/text/src/: text.cpp
src/text/test/: text.test.cpp
vcpkg-port/: portfile.cmake  usage  vcpkg.json
